[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Vogue.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://759140146a68424462e6fdee03cda5f6.jpg" type="Texture" id=2]
[ext_resource path="res://settings_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://buttons/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://StartScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="MainMenu"]
position = Vector2( 645.167, 367 )
scale = Vector2( 2.28664, 1.30142 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_top = 3.05176e-05
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "FUCK"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 299.0
margin_right = 1024.0
margin_bottom = 599.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Start" parent="MainMenu/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 60 )
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Options")
text = "Start"
arrow_margin_from_center = 135

[node name="Options" parent="MainMenu/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 60 )
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Exit")
text = "Options"
arrow_margin_from_center = 155

[node name="Exit" parent="MainMenu/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 184.0
margin_right = 1024.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 60 )
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Start")
text = "Exit"
arrow_margin_from_center = 125

[node name="settings_menu" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 519.0
margin_top = 348.0
margin_right = 646.0
margin_bottom = 408.0

[connection signal="pressed" from="MainMenu/VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
